--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -5,21 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.SignInActivity">
-    <ImageView
-        android:id="@+id/signIn_imgLogo"
-        android:src="@drawable/logo1"
-        android:layout_marginTop="5dp"
-        android:layout_centerHorizontal="true"
-        android:layout_width="100dp"
-        android:layout_height="120dp"/>
+   <TextView
+       android:id="@+id/signIn_tvTitle"
+       android:text="Sign in"
+       android:fontFamily="@font/nabila"
+       android:textStyle="bold"
+       android:textColor="@color/colorPrimary"
+       android:textSize="25sp"
+       android:layout_centerHorizontal="true"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"/>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/signIn_cvContainer"
         app:cardCornerRadius="5dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="20dp"
         android:backgroundTint="@color/colorPrimaryDark"
         android:layout_marginHorizontal="10dp"
-        android:layout_below="@+id/signIn_imgLogo"
+        android:layout_below="@+id/signIn_tvTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <LinearLayout
@@ -54,11 +57,18 @@
                 android:id="@+id/signIn_etPass"
                 android:hint="Enter Your Password"
                 android:gravity="center"
-                android:paddingBottom="5dp"
                 android:inputType="textPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
-
+            <TextView
+                android:id="@+id/signIn_tvForgot"
+                android:text="Forgot your password?"
+                android:textStyle="bold"
+                android:textSize="15sp"
+                android:paddingLeft="5dp"
+                android:paddingBottom="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
     <Button
@@ -67,7 +77,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/signIn_cvContainer"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:backgroundTint="@color/colorPrimary"
         android:background="@drawable/background_btn"
         android:text="Log in"/>
@@ -95,9 +105,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:text="If you don't have an account"
+            android:text="If this first time you sign in on this app, you'll need to click 'SIGN UP' or 'JUST GO'"
             android:textStyle="italic"
-            android:textSize="18sp"
+            android:textSize="14sp"
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
