--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,9 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.SignUpActivity">
+    <TextView
+        android:id="@+id/signUp_tvTitle"
+        android:textSize="25sp"
+        android:fontFamily="@font/nabila"
+        android:text="Sign up"
+        android:textStyle="bold"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="3dp"
+        android:textColor="@color/colorPrimary"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/signUp_imgAvatar"
         android:src="@drawable/avatar_facebook"
+        android:layout_below="@+id/signUp_tvTitle"
         android:layout_marginTop="5dp"
         android:layout_centerHorizontal="true"
         android:layout_width="100dp"
@@ -16,7 +28,7 @@
         android:id="@+id/signUp_imgChangeAvatar"
         android:src="@drawable/ic_camera_black_24dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="141dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
@@ -38,7 +50,7 @@
         android:background="@drawable/border_tv"
         android:layout_marginHorizontal="5dp"
         android:textSize="14dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:gravity="center"
         android:layout_below="@+id/signUp_etDisplayName"
         android:layout_width="match_parent"
@@ -49,7 +61,7 @@
         android:background="@drawable/border_tv"
         android:layout_marginHorizontal="5dp"
         android:textSize="14dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:gravity="center"
         android:inputType="textPassword"
         android:layout_below="@+id/signUp_etEmail"
@@ -61,7 +73,7 @@
         android:background="@drawable/border_tv"
         android:layout_marginHorizontal="5dp"
         android:textSize="14dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:gravity="center"
         android:inputType="textPassword"
         android:layout_below="@+id/signUp_etPassword"
@@ -74,21 +86,32 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/signUp_etConfirmPassword"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:backgroundTint="@color/colorPrimary"
         android:background="@drawable/background_btn"
         android:text="Sign Up"/>
-    <TextView
-        android:id="@+id/signUp_tvSignIn"
-        android:layout_alignParentBottom="true"
-        android:text="You have account. Sign in here"
-        android:textStyle="bold"
-        android:textSize="18sp"
-        android:textColor="@color/colorPrimaryDark"
+    <LinearLayout
+        android:orientation="vertical"
         android:gravity="center_horizontal"
-        android:layout_marginBottom="5dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content">
+        <TextView
+            android:text="You already have an account and don't need to create a new one. You're ready to sign in."
+            android:textSize="14sp"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/signUp_tvSignIn"
+            android:textSize="18sp"
+            android:textColor="@color/colorPrimary"
+            android:text="SIGN IN HERE"
+            android:textStyle="bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
 
 </RelativeLayout>
