--- a/app/src/main/res/layout/fragment_user_infor.xml
+++ b/app/src/main/res/layout/fragment_user_infor.xml
@@ -7,6 +7,17 @@
     android:layout_height="match_parent"
     tools:context=".fragment.Fragment_PostListAdmin">
 
+    <TextView
+        android:text="User Profile"
+        android:textSize="25sp"
+        android:fontFamily="@font/nabila"
+        android:textColor="@color/colorPrimary"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="5dp"
+        android:textStyle="bold"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/fUserInfo_imgAvatar"
         android:layout_marginTop="10dp"
@@ -15,135 +26,123 @@
         android:layout_gravity="center_horizontal"
         android:src="@drawable/avatar_header" />
    <LinearLayout
-       android:layout_marginTop="5dp"
+       android:layout_marginTop="20dp"
        android:orientation="vertical"
+       android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
-           android:layout_width="match_parent"
+           android:layout_width="250dp"
            android:layout_height="match_parent">
-           <TextView
-               android:text="Họ Tên:"
-               android:textStyle="bold"
-               android:gravity="right"
-               android:layout_weight="3"
-               android:layout_width="0dp"
-               android:layout_height="wrap_content"/>
+           <ImageView
+               android:src="@drawable/account"
+               android:layout_width="24dp"
+               android:layout_height="24dp"/>
 
            <TextView
                android:id="@+id/fUserInfo_tvName"
                android:text="Nguyễn Trọng Nhân"
                android:textStyle="bold"
+               android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
-               android:layout_weight="7"
-               android:layout_width="0dp"
+               android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
-           android:layout_width="match_parent"
+           android:layout_marginTop="5dp"
+           android:layout_width="250dp"
            android:layout_height="match_parent">
-           <TextView
-               android:text="Email:"
-               android:textStyle="bold"
-               android:gravity="right"
-               android:layout_weight="3"
-               android:layout_width="0dp"
-               android:layout_height="wrap_content"/>
+           <ImageView
+               android:src="@drawable/email"
+               android:layout_width="24dp"
+               android:layout_height="24dp"/>
            <TextView
                android:id="@+id/fUserInfo_tvEmail"
                android:text="nhanntps10674@fpt.edu.vn"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
-               android:layout_weight="7"
-               android:layout_width="0dp"
+               android:layout_gravity="center_vertical"
+               android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
+           android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
-           android:layout_width="match_parent"
+           android:layout_width="250dp"
            android:layout_height="match_parent">
-           <TextView
-               android:text="UID:"
-               android:textStyle="bold"
-               android:gravity="right"
-               android:layout_weight="3"
-               android:layout_width="0dp"
-               android:layout_height="wrap_content"/>
+           <ImageView
+               android:src="@drawable/id"
+               android:layout_width="24dp"
+               android:layout_height="24dp"/>
            <TextView
                android:id="@+id/fUserInfo_tvId"
                android:text="ID101001310132213515121"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
-               android:layout_weight="7"
-               android:layout_width="0dp"
+               android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
+           android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
-           android:layout_width="match_parent"
+           android:layout_width="250dp"
            android:layout_height="match_parent">
-           <TextView
-               android:text="SĐT:"
-               android:textStyle="bold"
-               android:gravity="right"
-               android:layout_weight="3"
-               android:layout_width="0dp"
-               android:layout_height="wrap_content"/>
+           <ImageView
+               android:src="@drawable/phone"
+               android:layout_width="24dp"
+               android:layout_height="24dp"/>
            <TextView
                android:id="@+id/fUserInfo_tvPhone"
                android:text="01669320364"
                android:textStyle="bold"
+               android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
-               android:layout_weight="7"
-               android:layout_width="0dp"
+               android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
-           android:layout_width="match_parent"
+           android:gravity="center_horizontal"
+           android:layout_marginTop="5dp"
+           android:layout_width="250dp"
            android:layout_height="match_parent">
-           <TextView
-               android:text="Ngày Sinh:"
-               android:textStyle="bold"
-               android:gravity="right"
-               android:layout_weight="3"
-               android:layout_width="0dp"
-               android:layout_height="wrap_content"/>
+           <ImageView
+               android:src="@drawable/cake"
+               android:layout_width="24dp"
+               android:layout_height="24dp"/>
            <TextView
                android:id="@+id/fUserInfo_tvBOD"
                android:text="20/02/2020"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
-               android:layout_weight="7"
-               android:layout_width="0dp"
+               android:layout_gravity="center_vertical"
+               android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
-           android:layout_width="match_parent"
+           android:layout_width="250dp"
+           android:layout_marginTop="5dp"
            android:layout_height="match_parent">
-           <TextView
-               android:text="Địa Chỉ:"
-               android:textStyle="bold"
-               android:gravity="right"
-               android:layout_weight="3"
-               android:layout_width="0dp"
-               android:layout_height="wrap_content"/>
+           <ImageView
+               android:src="@drawable/address"
+               android:layout_width="24dp"
+               android:layout_height="24dp"/>
            <TextView
                android:id="@+id/fUserInfo_tvAddress"
                android:text="Cộng Hòa, Tân Bình, TP.HCM"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
-               android:layout_weight="7"
-               android:layout_width="0dp"
+               android:layout_gravity="center_vertical"
+               android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
@@ -152,22 +151,23 @@
         android:layout_marginTop="10dp"
         android:gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
         <Button
             android:id="@+id/fUserInfo_btnEdit"
-            android:text="Cập nhật TT"
+            android:text="Edit profile"
             app:cornerRadius="5dp"
             android:textColor="#ffffff"
-            android:layout_gravity="center_horizontal"
+            android:layout_gravity="center_horizontal|center_vertical"
             android:backgroundTint="#4AA6EC"
             android:layout_marginLeft="10dp"
             android:layout_width="170dp"
             android:layout_height="wrap_content"/>
         <Button
             android:id="@+id/fUserInfo_btnFeedBack"
-            android:text="Gửi phản hồi"
+            android:text="Send Feedback"
             app:cornerRadius="5dp"
             android:textColor="#ffffff"
+            android:layout_gravity="center_horizontal|center_vertical"
             android:backgroundTint="#4AA6EC"
             android:layout_marginLeft="10dp"
             android:layout_width="170dp"
